# level3_cv_finalproject-cv-02

./: .gitignore  README.md
data_crawler/: README.md
data_crawler/good-or-not/: README.md  dataset.py  inference.py  main.py  model.py
data_crawler/musinsa-crawling/: README.md  main.py  pyproject.toml  requirements.txt  vton.py
data_crawler/musinsa-crawling/musinsa/: __init__.py  crawler.py  musinsa_vton.py  utils.py
frontend/: Home.py  accounts.yaml  frontend_requirements.txt  meotandard_apis.py  utils.py
frontend/datas/: cloth.py
frontend/pages/: 01_회원가입.py  02_로그인.py  03_옷장.py  04_상품 검색(test).py  04_상품_검색.py  04_상품_정보_획득.py  05_가상_피팅.py  05_상품_검색.py  06_가상_피팅.py
frontend/utils/: move.py  open.py
frontend_deprecated/: accounts.yaml  meotandard_apis.py
frontend_deprecated/pages/: 01_회원가입.py  02_로그인.py
frontend_deprecated/utils/: management.py
frontend_dev/: Home.py  frontend_requirements.txt  meotandard_apis.py
frontend_dev/.streamlit/: config.toml
frontend_dev/pages/: 01_상품_찾기.py  02_가상_피팅.py  관리자_상품_등록.py
frontend_dev/utils/: management.py  move.py
frontend_main/: Home.py  accounts.yaml  api_address.yaml  meotandard_apis.py
frontend_main/datas/: cloth.py
frontend_main/pages/: 01_상품_찾기.py  02_가상_피팅.py
frontend_main/utils/: open.py
retrieval_api/admin/: build.py  proxy.py
retrieval_api/customer/: embedding.py  proxy.py  search.py
seg_api/: pyproject.toml
seg_api/app/: __main__.py  main.py  mian.py  predictor.py
seg_api/app/frontend/: frontend.py
seg_api_origin/app/: main.py
viton_api/: .gitignore  README.md
viton_api/backend/: README.md  backend_requirements.txt  backend_requirements.yaml  cihp_pgn_requirements.yaml  densepose.py  human_parser.py  mask.py  masking.py  pose_estimation.py  proxy.py  viton.py
viton_api/frontend/: main.py  pyproject.toml  user.py
(+53 files in other folders)
