[tool.poetry]
name = "segapi"
version = "0.1.0"
description = ""
authors = ["DaHyeonnn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">=0.99.1,<0.100.0"
uvicorn = "^0.22.0"
pydantic = ">=1.7.4,<1.8 || >1.8,<1.8.1 || >1.8.1,<2.0.0"
torch = "^1.9.1"
albumentations = "^1.1.0"
torchvision = "^0.10.1"
requests = "^2.26.0"
gunicorn = "^20.1.0"
streamlit = "1.1.0"
opencv-python-headless = "4.5.1.48"
altair = "<5"
opencv-python = "^4.8.0.74"
matplotlib = "^3.7.2"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
protobuf = "3.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "20.8b1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
